fix: button alignment

--- a/web/src/components/Common/Contact/Contact.module.scss
+++ b/web/src/components/Common/Contact/Contact.module.scss
@@ -41,6 +41,7 @@
 .ButtonText {
   display: flex;
   align-items: center;
+  text-align: left;
 }
 
 .ButtonWrapper {
